scanCode to spaceId
