# src/models/handlers/VisitHandler.js
@@ -12,19 +12,18 @@ module.exports = function VisitHandler() {
     return Visit.findOne({ userGeneratedCode: content.userGeneratedCode });
   };
 
-  const spaceExists = async (scanCode) => {
-    let spaceId = scanCode;
-    if (scanCode.substr(scanCode.length - 5) === '_exit') {
-      spaceId = scanCode.substr(0, scanCode.length - 5);
+  const spaceExists = async (spaceId) => {
+    if (spaceId.substr(spaceId.length - 5) === '_exit') {
+      spaceId = spaceId.substr(0, spaceId.length - 5);
     }
     return SpaceHandler().spaceExists(spaceId);
   };
 
   const addVisit = async (content) => {
-    let scanCode = content.scanCode;
+    let spaceId = content.spaceId;
     let visitData = {
       _id: new mongoose.Types.ObjectId(),
-      scanCode,
+      spaceId,
       userGeneratedCode: content.userGeneratedCode,
       entranceTimestamp: content.entranceTimestamp,
       vaccinated: content.vaccinated,
@@ -45,12 +44,12 @@ module.exports = function VisitHandler() {
       return await Visit.updateOne({ _id: visit._id }, { exitTimestamp: content.exitTimestamp });
     } else {
       // entrance scan not found
-      let space = await Space.findOne({ _id: content.scanCode });
+      let space = await Space.findOne({ _id: content.spaceId });
       let entranceTimestamp = new Date(content.exitTimestamp);
       entranceTimestamp.setMinutes(entranceTimestamp.getMinutes() - space.estimatedVisitDuration);
       let visitData = {
         _id: new mongoose.Types.ObjectId(),
-        scanCode: content.scanCode,
+        spaceId: content.spaceId,
         userGeneratedCode: content.userGeneratedCode,
         entranceTimestamp,
         exitTimestamp: content.exitTimestamp,
